--- a/package.json
+++ b/package.json
@@ -14,5 +14,10 @@
     "back-end"
   ],
   "author": "Samuel Braga",
-  "license": "MIT"
+  "license": "MIT",
+  "dependencies": {
+    "dotenv": "^16.4.5",
+    "express": "^4.21.1",
+    "nodemon": "^3.1.7"
+  }
 }
