--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "server.js",
   "type": "module",
   "scripts": {
-    "dev": "nodemon src/server.js",
+    "dev": "nodemon etapa03/src/server.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [
